tests/snapshots/run_wpt_conformance__litert_reduceL2_float16_0D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_l2.https.any.js reduceL2 float16 0D constant tensor default options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceL2 { input: 0, options: Some(MLReduceOptions { label: "", axes: None, keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[] @bytes([220, 68]);
  }

  nodes {
    [reduceL2Output] = reduceL2(operand_0, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceL2Output; }
}
