tests/snapshots/run_wpt_conformance__litert_reduceL2_float16_0D_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_l2.https.any.js reduceL2 float16 0D tensor empty axes, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceL2 { input: 0, options: Some(MLReduceOptions { label: "", axes: Some([]), keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceL2Input: f16[];
  }

  nodes {
    [reduceL2Output] = reduceL2(reduceL2Input, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceL2Output; }
}
