tests/snapshots/run_wpt_conformance__litert_reduceL2_float16_1D_constant_tensor_all_positive_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_l2.https.any.js reduceL2 float16 1D constant tensor all positive default options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceL2 { input: 0, options: Some(MLReduceOptions { label: "", axes: None, keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([220, 68, 132, 85, 208, 82, 12, 84, 219, 70, 182, 85, 60, 81, 154, 84, 106, 80, 11, 82, 38, 85, 222, 84, 213, 85, 208, 83, 137, 83, 158, 74, 34, 77, 174, 82, 169, 73, 12, 84, 117, 81, 179, 58, 123, 57, 48, 80]);
  }

  nodes {
    [reduceL2Output] = reduceL2(operand_0, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceL2Output; }
}
